changed padding right to 0 to avoid white space wastage

--- a/src/widgets/comment/comment.module.css
+++ b/src/widgets/comment/comment.module.css
@@ -6,7 +6,7 @@
   box-sizing: border-box;
   max-width: 100%;
   width: fit-content;
-  padding: 12px;
+  padding: 12px 0 12px 12px;
   border-top: var(--border-style);
   border-left: var(--border-style);
 }
